--- a/ComponentsTest/ComponentsTest.csproj
+++ b/ComponentsTest/ComponentsTest.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Custom_Button">
+      <HintPath>..\Custom_Button\bin\Release\Custom_Button.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
